openshift/yaml/stress-app/stress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stress-service
spec:
  selector:
    app: stress
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
